--- a/app/views/activities/partials/_form.erb
+++ b/app/views/activities/partials/_form.erb
@@ -3,13 +3,13 @@
 <%= f.hidden_field :user_id, :value => current_user.id %>
 
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :value => @activity.name %>
 
     <%= f.label :duration %>
-    <%= f.text_field :duration %>
+    <%= f.text_field :duration, :value => @activity.duration %>
 
     <%= f.label :notes %>
-    <%= f.text_field :notes %>
+    <%= f.text_field :notes, :value => @activity.notes %>
 
     <%= f.submit %>
 
