--- a/app/views/activities/partials/_form.erb
+++ b/app/views/activities/partials/_form.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @activity do |f| %>
+<%= form_for @activity do |f| %>
 
 <%= f.hidden_field :user_id, :value => current_user.id %>
 
@@ -10,6 +10,9 @@
 
     <%= f.label :notes %>
     <%= f.text_field :notes, :value => @activity.notes %>
+
+    <%= f.collection_select(:category_id, @categories, :id, :name) %>
+
 
     <%= f.submit %>
 
